2010-08-12 Noel O'Boyle

	* src/obiter.cpp: GetAtom() was being called for a non-existent atom
	due to _notVisited having more Bits set than there were atoms in the
	molecule. This is due to the behaviour of OBBitVec::Negate() which
	sets all bits in OBBitVec to 1, including those bits that are just
	padding at an end of the OBBitVec.

	Also removed duplicate "if (!ptr) return" statements

2010-08-09 Chris Morley

	* src/formats/gaussformat.cpp:Comment out inconsistent use of
	OBMol::SetEnergy(double).
	
	The use of this needs to be agreed.
	
2010-08-10 Tim Vandermeersch

	* include/openbabel/rotor.h, src/rotor.cpp: Add method to fix bonds 
	and mark fix atoms as deprecated. Update documentation.

	* include/openbabel/conformersearch.h, src/conformersearch.cpp: Use
	OBAlign with symmetry and update documentation.

	* test/rotortest.cpp: Some OBRotor and OBRotorList unit tests.

2010-08-10  Noel O'Boyle

	* src/builder.cpp, include/openbabel/builder.h: Add a Set/Unset method
	for keeprings. This allows the user to keep the ring conformation from
	the input molecule (this only makes sense if it's a 3D structure to
	begin with). 

2010-08-09 Chris Morley

	* src/mcdlutil.cpp: fix to bug #3041650 (2D coordinates with
	disconnected molecules), provided by Sergei Trepalin.

2010-08-09  Noel O'Boyle

	* test/aligntest.cpp: Enable all parts of the alignment test
	* src/math/align.cpp, include/openbabel/math/align.h: Use Tim's work
	on masked isomorphisms. Small speedups in caching and matrix code.

	All of the alignment tests now pass and do so quickly.

2010-08-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/CMakeLists.txt: Patch from Wayne Volkmuth to fix use of
	PYTHON_PREFIX PR#3038634.

	* scripts/openbabel-csharp.i: Fixed moduleclass error broken with
	upgrade to SWIG 2.0.0.

	* src/formats/moldenformat.cpp: Add "molf" extension found with
	some example files.

2010-08-03 Chris Morley

	* src/ops/opisomorph.cpp:-s replacement. Is used instead of