@@ -331,6 +331,8 @@ namespace OpenBabel
   OBAPI double CalcTorsionAngle(const vector3 &a, const vector3 &b,
                                         const vector3 &c, const vector3 &d);
 
+  //! Calculate the signed distance of point a to the plane determined by b,c,d
+  OBAPI double Point2PlaneSigned(vector3 a, vector3 b, vector3 c, vector3 d);
   //! Calculate the distance of point a to the plane determined by b,c,d
   OBAPI double Point2Plane(vector3 a, vector3 b, vector3 c, vector3 d);
   //! Calculate the angle between point a and the plane determined by b,c,d
